Corrige nome de recurso
