# static/swagger.yaml
@@ -140,9 +140,9 @@ paths:
         - Bearer: []
   /products:
     get:
-      summary: Get products
-      description: Get saved products
-      operationId: getProducts
+      summary: List all products
+      description: List all products
+      operationId: listProducts
       responses:
         '200':
           description: OK
@@ -158,8 +158,8 @@ paths:
         - Bearer: []
   '/products/{id}':
     get:
-      summary: Get products
-      description: Get saved products
+      summary: Get product
+      description: Get product
       operationId: getProduct
       parameters:
         - in: path
@@ -179,11 +179,11 @@ paths:
           description: Internal Server Error
       security:
         - Bearer: []
-  '/whitelist/{client_id}':
+  '/wishlist/{client_id}':
     get:
-      summary: List products on withelist
-      description: List products on withelist
-      operationId: getWithelist
+      summary: List products on wishlist
+      description: List products on wishlist
+      operationId: getWishlist
       parameters:
         - in: path
           name: client_id
@@ -193,7 +193,7 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/Whitelist'
+            $ref: '#/definitions/Wishlist'
         '400':
           description: Invalid Request
         '404':
@@ -202,11 +202,11 @@ paths:
           description: Internal Server Error
       security:
         - Bearer: []
-  '/whitelist/{client_id}/{product_id}':
+  '/wishlist/{client_id}/{product_id}':
     post:
-      summary: Add product on client whitelist
-      description: Add product on client whitelist
-      operationId: addToWhitelist
+      summary: Add product on client wishlist
+      description: Add product on client wishlist
+      operationId: addTowishlist
       parameters:
         - in: path
           name: client_id
@@ -220,7 +220,7 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/ProductWhitelist'
+            $ref: '#/definitions/ProductWishlist'
         '400':
           description: Invalid Request
         '404':
@@ -284,7 +284,7 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Product'
-  ProductWhitelist:
+  ProductWishlist:
     type: object
     properties:
       favorite_list_id:
@@ -293,7 +293,7 @@ definitions:
         type: string
       id:
         type: integer
-  Whitelist:
+  Wishlist:
     type: array
     items:
-      $ref: '#/definitions/ProductWhitelist'
+      $ref: '#/definitions/ProductWishlist'
